tests/baselines/reference/parserMemberFunctionDeclaration1.errors.txt
==== tests/cases/compiler/parserMemberFunctionDeclaration1.ts (1 errors) ====
    class C {
        public public Foo() { }
               ~~~~~~
!!! parserMemberFunctionDeclaration1.ts(2,12): error TS1028: Accessibility modifier already seen.
    }